Finished networking assignment, still requires clean-up!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,10 @@ project(low-level_setup
  LANGUAGES CXX
 )
 
+# Force C++ 20 instead of C++ 17
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 add_subdirectory(dependencies)
 add_subdirectory(src)
